fix lucene warning